[REFACTOR/#52] Stream API 사용